Fixed issue with selects appearing "glossy" on safari

--- a/src/less/core/global.less
+++ b/src/less/core/global.less
@@ -187,3 +187,10 @@ th {
 textarea {
     resize: vertical;
 }
+
+// Fix issue with select tags in safari
+select {
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAAY0lEQVQokdXSwQmAMAyF4T/iNOJkIq7ikD25hM+DFlusNNSTCYG8w5dTTIiW6prUF9jHxbDqEaE9DQABkGNWcXaEkwNtwJDBC88VNIq7yQIsHvSABVxERZjg8IaEsP98TjM8AFoueJdPecmTAAAAAElFTkSuQmCC) no-repeat right 3px center;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
